Add scrolling to m64 description, clean up spacing, bump minor version

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -210,7 +210,7 @@ BEGIN
     PUSHBUTTON      "Website",IDC_WEBSITE,134,197,60,14
     GROUPBOX        "About this program",IDC_STATIC,5,65,189,127
     LTEXT           "Author:\r\n     Hacktarux (hacktarux@yahoo.fr)\r\n\nWindows port:\r\n     ShadowPrince (shadow@emulation64.com)\r\n     linker (linker@mail.bg)\r\n\r\nContributors:\r\n     Codex, Falcon4ever, Pir4nhaX, Malcolm,\r\n     Olivieryuyu\r\n\r\nThanks to the many others who helped",IDC_STATIC,13,82,173,104
-    LTEXT           "Mupen 64 1.0.10",IDC_STATIC,0,0,200,100
+    LTEXT           "Mupen 64 1.1.0",IDC_STATIC,70,30,120,12
 END
 
 IDD_ADVANCED_OPTIONS DIALOGEX 0, 0, 231, 273
@@ -483,7 +483,7 @@ BEGIN
     CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,144,86,69,10
 END
 
-IDD_MOVIE_PLAYBACK_DIALOG DIALOGEX 0, 0, 342, 330
+IDD_MOVIE_PLAYBACK_DIALOG DIALOGEX 0, 0, 342, 342
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Play Movie"
 FONT 8, "Tahoma", 400, 0, 0x0
@@ -492,124 +492,124 @@ BEGIN
     PUSHBUTTON      "Browse...",IDC_MOVIE_BROWSE,281,19,50,14
     PUSHBUTTON      "Refresh",IDC_MOVIE_REFRESH,281,3,50,14
     CONTROL         "Open Read-Only",IDC_MOVIE_READONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,203,6,69,10
-    EDITTEXT        IDC_PAUSEAT_FIELD,80,308,44,13,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDC_OK,225,309,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,281,309,50,14
-    GROUPBOX        "Movie Settings",IDC_ROM_HEADER_INFO_TEXT,9,106,153,195
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,23,125,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,23,136,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME,56,125,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY,56,136,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,15,167,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN,23,180,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN,23,191,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN,23,202,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN,23,214,32,8
-    LTEXT           "Pause at frame:",IDC_PAUSEAT_LABEL,23,311,52,10
+    EDITTEXT        IDC_PAUSEAT_FIELD,80,320,44,13,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "OK",IDC_OK,225,320,50,14
+    PUSHBUTTON      "Cancel",IDC_CANCEL,281,320,50,14
+    GROUPBOX        "Movie Settings",IDC_ROM_HEADER_INFO_TEXT,9,118,153,195
+    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT,23,139,31,8
+    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT,23,151,32,8
+    EDITTEXT        IDC_ROM_INTERNAL_NAME,56,139,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_ROM_COUNTRY,56,151,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Plugins",IDC_ROM_PLUGINS,15,179,140,62
+    LTEXT           "Video:",IDC_GFXPLUGIN,23,191,32,10
+    LTEXT           "Sound:",IDC_SOUNDPLUGIN,23,203,31,8
+    LTEXT           "Input:",IDC_INPUTPLUGIN,23,215,31,8
+    LTEXT           "RSP:",IDC_RSPPLUGIN,23,227,32,8
+    LTEXT           "Pause at frame:",IDC_PAUSEAT_LABEL,23,323,52,10
     LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,16,22,40,8
     EDITTEXT        IDC_INI_AUTHOR,59,42,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_DESCRIPTION,59,60,272,12,ES_AUTOHSCROLL
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,23,148,31,8
-    EDITTEXT        IDC_ROM_CRC,56,149,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,16,115,139,50
+    EDITTEXT        IDC_INI_DESCRIPTION,59,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
+    LTEXT           "CRC:",IDC_ROM_CRC_TEXT,23,163,31,8
+    EDITTEXT        IDC_ROM_CRC,56,163,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,16,127,139,50
     LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,25,44,29,8
-    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,12,62,42,8
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,56,180,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT,56,191,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT,56,203,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT,56,214,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,15,233,140,61
-    LTEXT           "1:",IDC_CONTROLLER1,23,245,32,10
-    LTEXT           "2:",IDC_CONTROLLER2,23,256,31,8
-    LTEXT           "3:",IDC_CONTROLLER3,23,267,31,8
-    LTEXT           "4:",IDC_CONTROLLER4,23,278,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,55,243,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,55,255,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,55,266,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,55,277,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Your Settings",IDC_ROM_HEADER_INFO_TEXT2,179,106,153,195
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT2,193,125,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT2,193,136,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME2,226,125,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY2,226,136,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS2,185,168,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN2,193,180,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN2,193,191,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN2,193,202,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN2,193,214,32,8
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT2,193,149,31,8
-    EDITTEXT        IDC_ROM_CRC3,226,149,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT2,186,115,139,50
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT2,226,181,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT2,226,192,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT2,226,203,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT2,226,215,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS2,185,234,140,61
-    LTEXT           "1:",IDC_CONTROLLER5,193,245,32,10
-    LTEXT           "2:",IDC_CONTROLLER6,193,256,31,8
-    LTEXT           "3:",IDC_CONTROLLER7,193,267,31,8
-    LTEXT           "4:",IDC_CONTROLLER8,193,279,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT2,225,244,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,225,256,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,225,267,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,225,278,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,25,79,32,8
-    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,24,93,32,8
-    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,186,79,43,8
-    EDITTEXT        IDC_MOVIE_LENGTH,58,79,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_FRAMES,58,92,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RERECORDS,232,79,93,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    LTEXT           "Starts From:",IDC_STARTSFROM_LABEL,184,93,45,8
-    EDITTEXT        IDC_FROMSNAPSHOT_TEXT,232,93,56,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,12,68,42,8
+    EDITTEXT        IDC_MOVIE_VIDEO_TEXT,56,191,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_SOUND_TEXT,56,203,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_INPUT_TEXT,56,215,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RSP_TEXT,56,227,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS,15,245,140,62
+    LTEXT           "1:",IDC_CONTROLLER1,23,257,32,10
+    LTEXT           "2:",IDC_CONTROLLER2,23,269,31,8
+    LTEXT           "3:",IDC_CONTROLLER3,23,281,31,8
+    LTEXT           "4:",IDC_CONTROLLER4,23,293,32,8
+    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT,55,257,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT,55,269,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT,55,281,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT,55,293,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Your Settings",IDC_ROM_HEADER_INFO_TEXT2,179,118,153,195
+    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT2,193,139,31,8
+    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT2,193,151,32,8
+    EDITTEXT        IDC_ROM_INTERNAL_NAME2,226,139,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_ROM_COUNTRY2,226,151,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Plugins",IDC_ROM_PLUGINS2,185,179,140,62
+    LTEXT           "Video:",IDC_GFXPLUGIN2,193,191,32,10
+    LTEXT           "Sound:",IDC_SOUNDPLUGIN2,193,203,31,8
+    LTEXT           "Input:",IDC_INPUTPLUGIN2,193,215,31,8
+    LTEXT           "RSP:",IDC_RSPPLUGIN2,193,227,32,8
+    LTEXT           "CRC:",IDC_ROM_CRC_TEXT2,193,163,31,8
+    EDITTEXT        IDC_ROM_CRC3,226,163,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT2,186,127,139,50
+    EDITTEXT        IDC_MOVIE_VIDEO_TEXT2,226,191,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_SOUND_TEXT2,226,203,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_INPUT_TEXT2,226,215,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RSP_TEXT2,226,227,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS2,185,245,140,62
+    LTEXT           "1:",IDC_CONTROLLER5,193,257,32,10
+    LTEXT           "2:",IDC_CONTROLLER6,193,269,31,8
+    LTEXT           "3:",IDC_CONTROLLER7,193,281,31,8
+    LTEXT           "4:",IDC_CONTROLLER8,193,293,32,8
+    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT2,225,257,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,225,269,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,225,281,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,225,293,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Length:",IDC_MOVIE_LENGTH_TEXT,25,91,32,8
+    LTEXT           "Frames:",IDC_MOVIE_FRAMES_TEXT,24,105,32,8
+    LTEXT           "Re-records:",IDC_MOVIE_RERECORDS_TEXT,186,91,43,8
+    EDITTEXT        IDC_MOVIE_LENGTH,58,91,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_FRAMES,58,105,104,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RERECORDS,232,91,93,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    LTEXT           "Starts From:",IDC_STARTSFROM_LABEL,184,105,45,8
+    EDITTEXT        IDC_FROMSNAPSHOT_TEXT,232,105,56,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
 END
 
-IDD_MOVIE_RECORD_DIALOG DIALOGEX 0, 0, 335, 239
+IDD_MOVIE_RECORD_DIALOG DIALOGEX 0, 0, 335, 251
 STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Record Movie"
 FONT 8, "Tahoma", 400, 0, 0x0
 BEGIN
     EDITTEXT        IDC_INI_MOVIEFILE,54,20,272,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_INI_AUTHOR,54,42,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_DESCRIPTION,54,60,272,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_INI_DESCRIPTION,54,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
     PUSHBUTTON      "Save as...",IDC_MOVIE_BROWSE,276,3,50,14
-    DEFPUSHBUTTON   "OK",IDC_OK,220,218,50,14
-    PUSHBUTTON      "Cancel",IDC_CANCEL,276,218,50,14
+    DEFPUSHBUTTON   "OK",IDC_OK,220,230,50,14
+    PUSHBUTTON      "Cancel",IDC_CANCEL,276,230,50,14
     LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,11,22,40,8
     LTEXT           "Author:",IDC_MOVIE_AUTHOR_TEXT,20,44,29,8
-    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,7,62,42,8
-    GROUPBOX        "Settings",IDC_ROM_HEADER_INFO_TEXT2,21,79,306,132
-    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT2,36,98,31,8
-    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT2,36,109,32,8
-    EDITTEXT        IDC_ROM_INTERNAL_NAME2,69,98,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_ROM_COUNTRY2,69,109,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Plugins",IDC_ROM_PLUGINS2,28,142,140,62
-    LTEXT           "Video:",IDC_GFXPLUGIN2,36,155,32,10
-    LTEXT           "Sound:",IDC_SOUNDPLUGIN2,36,166,31,8
-    LTEXT           "Input:",IDC_INPUTPLUGIN2,36,177,31,8
-    LTEXT           "RSP:",IDC_RSPPLUGIN2,36,189,32,8
-    LTEXT           "CRC:",IDC_ROM_CRC_TEXT2,36,122,31,8
-    EDITTEXT        IDC_ROM_CRC3,69,122,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT2,29,88,139,50
-    EDITTEXT        IDC_MOVIE_VIDEO_TEXT2,69,155,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_SOUND_TEXT2,69,166,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_INPUT_TEXT2,69,177,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_RSP_TEXT2,69,189,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS2,177,142,140,62
-    LTEXT           "1:",IDC_CONTROLLER5,185,154,32,10
-    LTEXT           "2:",IDC_CONTROLLER6,185,165,31,8
-    LTEXT           "3:",IDC_CONTROLLER7,185,177,31,8
-    LTEXT           "4:",IDC_CONTROLLER8,185,189,32,8
-    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT2,217,154,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,217,165,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,176,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,187,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
-    GROUPBOX        "Start From",IDC_STARTFROM2,177,88,139,50
-    CONTROL         ".savestate",IDC_EXTSAVESTATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,223,124,45,10
-    CONTROL         "Savestate",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,190,112,45,10
+    LTEXT           "Description:",IDC_MOVIE_DESCRIPTION_TEXT,7,68,42,8
+    GROUPBOX        "Settings",IDC_ROM_HEADER_INFO_TEXT2,21,91,306,132
+    LTEXT           "Name:",IDC_ROM_INTERNAL_NAME_TEXT2,36,110,31,8
+    LTEXT           "Country:",IDC_ROM_COUNTRY_TEXT2,36,122,32,8
+    EDITTEXT        IDC_ROM_INTERNAL_NAME2,69,110,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_ROM_COUNTRY2,69,122,88,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Plugins",IDC_ROM_PLUGINS2,28,154,140,62
+    LTEXT           "Video:",IDC_GFXPLUGIN2,36,166,32,10
+    LTEXT           "Sound:",IDC_SOUNDPLUGIN2,36,178,31,8
+    LTEXT           "Input:",IDC_INPUTPLUGIN2,36,190,31,8
+    LTEXT           "RSP:",IDC_RSPPLUGIN2,36,202,32,8
+    LTEXT           "CRC:",IDC_ROM_CRC_TEXT2,36,134,31,8
+    EDITTEXT        IDC_ROM_CRC3,69,134,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "ROM",IDC_ROM_INFO_TEXT2,29,100,139,50
+    EDITTEXT        IDC_MOVIE_VIDEO_TEXT2,69,166,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_SOUND_TEXT2,69,178,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_INPUT_TEXT2,69,190,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_RSP_TEXT2,69,202,98,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Controllers",IDC_MOVIE_CONTROLLERS2,177,154,140,62
+    LTEXT           "1:",IDC_CONTROLLER5,185,166,32,10
+    LTEXT           "2:",IDC_CONTROLLER6,185,178,31,8
+    LTEXT           "3:",IDC_CONTROLLER7,185,190,31,8
+    LTEXT           "4:",IDC_CONTROLLER8,185,202,32,8
+    EDITTEXT        IDC_MOVIE_CONTROLLER1_TEXT2,217,166,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER2_TEXT2,217,178,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER3_TEXT2,217,190,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    EDITTEXT        IDC_MOVIE_CONTROLLER4_TEXT2,217,202,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
+    GROUPBOX        "Start From",IDC_STARTFROM2,177,100,139,50
+    CONTROL         ".savestate",IDC_EXTSAVESTATE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,223,136,45,10
+    CONTROL         "Savestate",IDC_FROMSNAPSHOT_RADIO,"Button",BS_AUTORADIOBUTTON,190,124,45,10
     CONTROL         "Existing Savestate",IDC_FROMEXISTINGSNAPSHOT_RADIO,
-                    "Button",BS_AUTORADIOBUTTON,241,100,70,10
-    CONTROL         "Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,190,100,50,10
-    CONTROL         "EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,241,112,64,10
+                    "Button",BS_AUTORADIOBUTTON,241,112,70,10
+    CONTROL         "Start",IDC_FROMSTART_RADIO,"Button",BS_AUTORADIOBUTTON,190,112,50,10
+    CONTROL         "EEPROM",IDC_FROMEEPROM_RADIO,"Button",BS_AUTORADIOBUTTON,241,124,64,10
 END
 
 IDD_ROM_SETTING_DIALOG DIALOGEX 0, 0, 340, 305
@@ -636,7 +636,7 @@ BEGIN
     EDITTEXT        IDC_ROM_INICODE,72,102,196,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     EDITTEXT        IDC_ROM_MD5,72,119,138,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     GROUPBOX        "Plugins",IDC_ROM_PLUGINS,7,144,324,98
-    LTEXT           "Video  Plugin:",IDC_GFXPLUGIN,16,157,215,80
+    LTEXT           "Video Plugin:",IDC_GFXPLUGIN,16,157,215,80
     COMBOBOX        IDC_COMBO_GFX,16,167,140,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Sound Plugin:",IDC_SOUNDPLUGIN,180,157,55,8
     COMBOBOX        IDC_COMBO_SOUND,180,167,140,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
