Fix description textbox not catching return key

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -508,7 +508,7 @@ BEGIN
     LTEXT           "Pause at frame:",IDC_PAUSEAT_LABEL,23,323,52,10
     LTEXT           "Movie File:",IDC_INI_MOVIEFILE_TEXT,16,22,40,8
     EDITTEXT        IDC_INI_AUTHOR,59,42,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_DESCRIPTION,59,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
+    EDITTEXT        IDC_INI_DESCRIPTION,59,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL | ES_WANTRETURN
     LTEXT           "CRC:",IDC_ROM_CRC_TEXT,23,163,31,8
     EDITTEXT        IDC_ROM_CRC,56,163,91,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER
     GROUPBOX        "ROM",IDC_ROM_INFO_TEXT,16,127,139,50
@@ -570,7 +570,7 @@ FONT 8, "Tahoma", 400, 0, 0x0
 BEGIN
     EDITTEXT        IDC_INI_MOVIEFILE,54,20,272,12,ES_AUTOHSCROLL
     EDITTEXT        IDC_INI_AUTHOR,54,42,272,12,ES_AUTOHSCROLL
-    EDITTEXT        IDC_INI_DESCRIPTION,54,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
+    EDITTEXT        IDC_INI_DESCRIPTION,54,60,272,24,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL | ES_WANTRETURN
     PUSHBUTTON      "Save as...",IDC_MOVIE_BROWSE,276,3,50,14
     DEFPUSHBUTTON   "OK",IDC_OK,220,230,50,14
     PUSHBUTTON      "Cancel",IDC_CANCEL,276,230,50,14
