Fix UI Issues, cleanup ffmpeg a little

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -282,9 +282,9 @@ BEGIN
     LTEXT           "Current ROM:",IDC_CURRENT_ROM_TEXT,12,70,48,8
     LTEXT           "",IDC_CURRENT_ROM,59,70,16,8
     LTEXT           "File Location:",IDC_ROM_FULLPATH_TEXT,12,11,131,8
-    DEFPUSHBUTTON   "Start",IDC_START,12,118,50,14
-    PUSHBUTTON      "Stop",IDC_STOP,68,118,50,14,WS_DISABLED
-    PUSHBUTTON      "Close",IDC_CLOSE,122,118,50,14
+    DEFPUSHBUTTON   "Start",IDC_AUDIT_START,12,118,50,14
+    PUSHBUTTON      "Stop",IDC_AUDIT_STOP,68,118,50,14,WS_DISABLED
+    PUSHBUTTON      "Close",IDC_AUDIT_CLOSE,122,118,50,14
     EDITTEXT        IDC_ROM_FULLPATH,11,23,160,12,ES_AUTOHSCROLL | ES_READONLY | NOT WS_BORDER,WS_EX_STATICEDGE
     RTEXT           "",IDC_MD5_PROGRESS,148,11,23,8
     CONTROL         "",IDC_CURRENT_ROM_PROGRESS,"msctls_progress32",PBS_SMOOTH,11,38,160,14,WS_EX_STATICEDGE
@@ -682,7 +682,7 @@ BEGIN
     PUSHBUTTON      "Resume",IDC_DEBUGGER_RESUME,14,37,55,14
     PUSHBUTTON      "RDRAM Dump",IDC_DEBUGGER_DUMPRDRAM,70,23,55,14
     PUSHBUTTON      "Step",IDC_DEBUGGER_STEP,70,37,55,14,WS_DISABLED
-    DEFPUSHBUTTON   "Quit Debugger",IDOK,253,156,50,14
+    DEFPUSHBUTTON   "Quit Debugger",IDOK,250,156,54,14
     GROUPBOX        "",IDC_STATIC,158,15,145,141
     LTEXT           "Instruction:",IDC_STATIC,166,25,38,12
     LTEXT           "Address",IDC_STATIC,166,37,38,14
