Fix checkboxes, Fix pausing at frame 0 on m64 load, fix off by one, allow cancelling m64 run after loop

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -492,7 +492,7 @@ BEGIN
     PUSHBUTTON      "Browse...",IDC_MOVIE_BROWSE,281,19,50,14
     PUSHBUTTON      "Refresh",IDC_MOVIE_REFRESH,281,3,50,14
     CONTROL         "Open Read-Only",IDC_MOVIE_READONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,203,6,69,10
-    EDITTEXT        IDC_PAUSEAT_FIELD,80,320,44,13,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PAUSEAT_FIELD,80,320,44,13,ES_AUTOHSCROLL | ES_NUMBER
     DEFPUSHBUTTON   "OK",IDC_OK,225,320,50,14
     PUSHBUTTON      "Cancel",IDC_CANCEL,281,320,50,14
     GROUPBOX        "Movie Settings",IDC_ROM_HEADER_INFO_TEXT,9,118,153,195
