Clean up config dialog box

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -401,7 +401,7 @@ BEGIN
     LTEXT           "Speed Down:",IDC_SPDDOWN,18,40,57,8,0,WS_EX_RIGHT
     LTEXT           "Frame Advance:",IDC_FRAMEADVANCE,18,52,57,8,0,WS_EX_RIGHT
     LTEXT           "Pause / Resume:",IDC_PAUSE,11,64,64,8,0,WS_EX_RIGHT
-    LTEXT           "Toggle Read-Only:",IDC_READONLY,12,76,62,8,0,WS_EX_RIGHT
+    LTEXT           "Toggle Read-Only:",IDC_READONLY,13,76,62,8,0,WS_EX_RIGHT
     LTEXT           "Play Movie:",IDC_PLAYMOVIE,160,10,60,8
     PUSHBUTTON      "Ctrl Shift P",IDC_HOT_PLAY,160,19,60,11
     LTEXT           "Stop Playing:",IDC_STOPPLAY,160,32,60,8
@@ -469,7 +469,7 @@ BEGIN
     CONTROL         "Alert for save errors",IDC_ALERTSAVESERRORS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,49,150,10
     GROUPBOX        "FPS / VIs",IDC_FPSTITLE,7,71,215,94
     CONTROL         "Limit VIs (auto)",IDC_LIMITFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,86,69,10
-    CONTROL         "Use Speed Modifier",IDC_SPEEDMODIFIER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,26,100,150,10
+    CONTROL         "Use Speed Modifier",IDC_SPEEDMODIFIER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,26,100,72,10
     CONTROL         "Show FPS",IDC_SHOWFPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,134,87,10
     CONTROL         "Show VIs",IDC_SHOWVIS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,149,79,10
     GROUPBOX        "CPU Core",IDC_CPUCORE,7,170,215,56
@@ -478,7 +478,7 @@ BEGIN
     CONTROL         "Pure Interpreter",IDC_PURE_INTERP,"Button",BS_AUTORADIOBUTTON,16,209,150,12
     CONTROL         "Use compressed file",IDC_INI_COMPRESSED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,16,240,150,12
     GROUPBOX        "Ini file",IDC_INIFILE,7,230,215,26
-    EDITTEXT        IDC_SKIPFREQ,162,138,45,12,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SKIPFREQ,162,138,45,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Fast forward skip frequency:",IDC_FASTFORWARDSKIPFREQ,108,131,53,25
     CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,144,86,69,10
 END
