Fix alignment issues in plugin configuration dialog and update plugin icons
https://developers.google.com/fonts/docs/material_icons#licensing

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -434,30 +434,30 @@ IDD_MAIN DIALOGEX 0, 0, 231, 262
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP
 FONT 8, "Tahoma", 0, 0, 0x0
 BEGIN
-    GROUPBOX        "GFX  Plugin",IDC_GFXPLUGIN,7,13,215,53
-    COMBOBOX        IDC_COMBO_GFX,51,27,164,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDGFXCONFIG,52,44,51,15
-    PUSHBUTTON      "Test",IDGFXTEST,108,44,51,15
-    PUSHBUTTON      "About",IDGFXABOUT,164,44,51,15
-    GROUPBOX        "Input Plugin",IDC_INPUTPLUGIN,7,72,215,53
-    COMBOBOX        IDC_COMBO_INPUT,51,86,164,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDINPUTCONFIG,52,103,51,15
-    PUSHBUTTON      "Test",IDINPUTTEST,108,103,51,15
-    PUSHBUTTON      "About",IDINPUTABOUT,164,103,51,15
-    GROUPBOX        "Sound Plugin",IDC_SOUNDPLUGIN,7,131,215,53
-    COMBOBOX        IDC_COMBO_SOUND,51,145,164,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDSOUNDCONFIG,52,162,51,15
-    PUSHBUTTON      "Test",IDSOUNDTEST,108,162,51,15
-    PUSHBUTTON      "About",IDSOUNDABOUT,164,162,51,15
-    GROUPBOX        "RSP Plugin",IDC_RSPPLUGIN,7,191,215,53
-    COMBOBOX        IDC_COMBO_RSP,51,204,164,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Config",IDRSPCONFIG,52,221,51,15
-    PUSHBUTTON      "Test",IDRSPTEST,108,221,51,15
-    PUSHBUTTON      "About",IDRSPABOUT,164,221,51,15
-    CONTROL         "",IDB_DISPLAY,"Static",SS_BITMAP,13,27,33,31,WS_EX_STATICEDGE
-    CONTROL         "",IDB_CONTROL,"Static",SS_BITMAP,13,86,33,31,WS_EX_STATICEDGE
-    CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,145,33,31,WS_EX_STATICEDGE
-    CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,204,33,31,WS_EX_STATICEDGE
+    GROUPBOX        "GFX  Plugin",IDC_GFXPLUGIN,6,12,215,53
+    COMBOBOX        IDC_COMBO_GFX,54,24,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Config",IDGFXCONFIG,54,42,48,15
+    PUSHBUTTON      "Test",IDGFXTEST,108,42,48,15
+    PUSHBUTTON      "About",IDGFXABOUT,162,42,48,15
+    GROUPBOX        "Input Plugin",IDC_INPUTPLUGIN,6,72,215,53
+    COMBOBOX        IDC_COMBO_INPUT,54,84,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Config",IDINPUTCONFIG,54,102,48,15
+    PUSHBUTTON      "Test",IDINPUTTEST,108,102,48,15
+    PUSHBUTTON      "About",IDINPUTABOUT,162,102,48,15
+    GROUPBOX        "Sound Plugin",IDC_SOUNDPLUGIN,6,132,215,53
+    COMBOBOX        IDC_COMBO_SOUND,54,144,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Config",IDSOUNDCONFIG,54,162,48,15
+    PUSHBUTTON      "Test",IDSOUNDTEST,108,162,48,15
+    PUSHBUTTON      "About",IDSOUNDABOUT,162,162,48,15
+    GROUPBOX        "RSP Plugin",IDC_RSPPLUGIN,6,192,215,53
+    COMBOBOX        IDC_COMBO_RSP,54,204,156,100,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Config",IDRSPCONFIG,54,222,48,15
+    PUSHBUTTON      "Test",IDRSPTEST,108,222,48,15
+    PUSHBUTTON      "About",IDRSPABOUT,162,222,48,15
+    CONTROL         "",IDB_DISPLAY,"Static",SS_BITMAP,13,27,33,31
+    CONTROL         "",IDB_CONTROL,"Static",SS_BITMAP,13,86,33,31
+    CONTROL         "",IDB_SOUND,"Static",SS_BITMAP,13,145,33,31
+    CONTROL         "",IDB_RSP,"Static",SS_BITMAP,13,204,33,31
 END
 
 IDD_MESSAGES DIALOGEX 0, 0, 231, 262
