Fix crash handler dialog icon transparency

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ winproject/plugin
 /winproject/mupen64.cfg
 /winproject/mupen64.cache
 /winproject/debugview.ini
+/winproject/mupen64/mupen64_2017.vcxproj.user
