Add info button to plugin directory changing section instead of constantly nagging the user

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -331,13 +331,14 @@ BEGIN
     PUSHBUTTON      "Browse...",IDC_CHOOSE_PLUGINS_DIR,162,126,54,12
     EDITTEXT        IDC_SCREENSHOTS_DIR,12,222,144,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Browse...",IDC_CHOOSE_SCREENSHOTS_DIR,162,222,54,12
-    CONTROL         "Use Default (/plugin)",IDC_DEFAULT_PLUGINS_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,114,204,10
+    CONTROL         "Use Default (/plugin)",IDC_DEFAULT_PLUGINS_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,114,84,10
     GROUPBOX        "Saves Directory:",IDC_SAVES_GROUP,6,150,216,42
     EDITTEXT        IDC_SAVES_DIR,12,174,144,12,ES_AUTOHSCROLL
     CONTROL         "Use default (/screenshots)",IDC_DEFAULT_SCREENSHOTS_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,210,200,10
     PUSHBUTTON      "Browse...",IDC_CHOOSE_SAVES_DIR,162,174,54,12
     CONTROL         "Use default (/save)",IDC_DEFAULT_SAVES_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,162,204,8
+    PUSHBUTTON      "?",IDC_PLUGIN_DIRECTORY_HELP,198,108,18,18
 END
 
 IDD_HOTKEY_CONFIG DIALOGEX 0, 0, 231, 262
@@ -477,7 +478,7 @@ BEGIN
     CONTROL         "0-index statusbar",IDC_0INDEX,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,108,75,8
     CONTROL         "",IDC_FPSTRACKBAR,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,24,91,192,12
     PUSHBUTTON      "?",IDC_SKIPFREQUENCY_HELP,198,132,14,12
-    CONTROL         "Allow arbitrary savestate loading",IDC_ALLOW_ARBITRARY_SAVESTATE_LOADING,
+    CONTROL         "State-independent savestate loading",IDC_ALLOW_ARBITRARY_SAVESTATE_LOADING,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,30,120,8
 END
 
