Add disassembly and frequent update functionality to debugger

--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -671,19 +671,23 @@ BEGIN
     CONTROL         "",IDC_ERROR_PICTUREBOX,"Static",SS_OWNERDRAW,6,6,42,36
 END
 
-IDD_GAMEDEBUGGERDIALOG DIALOGEX 0, 0, 311, 62
+IDD_GAMEDEBUGGERDIALOG DIALOGEX 0, 0, 311, 98
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_CAPTION | WS_SYSMENU
 CAPTION "N64 Debugger"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Pause",IDC_DEBUGGER_TOGGLEPAUSE,6,6,54,15
-    PUSHBUTTON      "Advance",IDC_DEBUGGER_STEP,66,6,54,15
-    CTEXT           "Address",IDC_STATIC,132,6,54,15,SS_CENTERIMAGE
-    CTEXT           "Opcode",IDC_STATIC,132,36,54,15,SS_CENTERIMAGE
-    EDITTEXT        IDC_DEBUGGER_PRECOMPADDR,192,6,109,15,ES_AUTOHSCROLL | ES_READONLY
-    EDITTEXT        IDC_DEBUGGER_PRECOMPOP,192,36,109,15,ES_AUTOHSCROLL | ES_READONLY
-    CONTROL         "RSP",IDC_DEBUGGER_RSP_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,54,15
-    CONTROL         "Cartridge Tilt",IDC_DEBUGGER_DMA_R_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,30,54,15
+    PUSHBUTTON      "Pause",IDC_DEBUGGER_TOGGLEPAUSE,6,6,54,18
+    PUSHBUTTON      "Advance",IDC_DEBUGGER_STEP,66,6,54,18
+    CTEXT           "Address",IDC_STATIC,126,6,66,18,SS_CENTERIMAGE
+    CTEXT           "Opcode",IDC_STATIC,126,30,66,18,SS_CENTERIMAGE
+    EDITTEXT        IDC_DEBUGGER_PRECOMPADDR,198,6,97,18,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_DEBUGGER_PRECOMPOP,198,30,96,18,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "RSP",IDC_DEBUGGER_RSP_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,42,54,8
+    CONTROL         "Cartridge Tilt",IDC_DEBUGGER_DMA_R_TOGGLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,30,72,9
+    CTEXT           "Disassembled",IDC_STATIC,126,54,66,18,SS_CENTERIMAGE
+    EDITTEXT        IDC_DEBUGGER_DISASSEMBLED,198,54,96,18,ES_AUTOHSCROLL | ES_READONLY
+    CONTROL         "Regular interval updates",IDC_DEBUGGER_ALWAYS_UPDATE,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,54,96,8
 END
 
 
@@ -823,6 +827,7 @@ BEGIN
         LEFTMARGIN, 4
         RIGHTMARGIN, 307
         VERTGUIDE, 57
+        BOTTOMMARGIN, 62
     END
 END
 #endif    // APSTUDIO_INVOKED
