Implement hotkey search function

--- a/winproject/mupen64/mupen64_2017.vcxproj
+++ b/winproject/mupen64/mupen64_2017.vcxproj
@@ -251,6 +251,8 @@
     <ClInclude Include="..\..\main\win\vfw.h" />
     <ClInclude Include="..\..\main\win\GameDebugger.h" />
     <ClInclude Include="..\..\main\win\wrapper\ReassociatingFileDialog.h" />
+    <ClInclude Include="..\..\main\helpers\numeric_helpers.h" />
+    <ClInclude Include="..\..\main\helpers\string_helpers.h" />
     <CustomBuildStep Include="..\..\main\gui_gtk\aboutdialog.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Profile|Win32'">true</ExcludedFromBuild>
