--- a/winproject/rsrc.rc
+++ b/winproject/rsrc.rc
@@ -414,9 +414,10 @@ IDD_NEW_HOTKEY_DIALOG DIALOGEX 0, 0, 231, 262
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    LISTBOX         IDC_HOTKEY_LIST,6,6,216,228,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LISTBOX         IDC_HOTKEY_LIST,6,24,216,210,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Assign...",IDC_HOTKEY_ASSIGN_SELECTED,6,240,54,14
     EDITTEXT        IDC_SELECTED_HOTKEY_TEXT,66,240,156,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_HOTKEY_SEARCH,6,6,216,14,ES_AUTOHSCROLL
 END
 
 IDD_LANG_INFO DIALOGEX 0, 0, 236, 82
@@ -571,7 +572,7 @@ BEGIN
 END
 
 IDD_MOVIE_RECORD_DIALOG DIALOGEX 0, 0, 335, 251
-STYLE DS_SETFONT | DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Record Movie"
 FONT 8, "MS Shell Dlg", 400, 0, 0x0
 BEGIN
